--- a/.ci.yml
+++ b/.ci.yml
@@ -26,13 +26,13 @@ variables:
     - if [ "$RUN_CTEST" = "true" ]; then CTEST="ctest -V"; else CTEST=":"; fi
     - mkdir shared
     - cd shared
-    - cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_LLVM_LIBS=ON $CMAKE_XVARS ..
+    - cmake -DCMAKE_BUILD_TYPE=Release $CMAKE_XVARS ..
     - make -j$(nproc) VERBOSE=1
     - $CTEST
     - cd ..
     - mkdir static
     - cd static
-    - cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_LLVM_LIBS=ON $CMAKE_XVARS -DSTATIC_LLVM_DISAS=ON ..
+    - cmake -DCMAKE_BUILD_TYPE=Release $CMAKE_XVARS -DSTATIC_LLVM_DISAS=ON ..
     - make -j$(nproc) VERBOSE=1
     - $CTEST
 
