--- a/.ci.yml
+++ b/.ci.yml
@@ -143,7 +143,7 @@ windows:
     - ssh windows choco install python3 --version=3.10.8 -y --no-progress
     - ssh windows bash .ci/windows.sh
     - ssh windows ldd shared/libllvm-disas.dll
-    - ssh windows 'tar -c -f - shared' | tar -x -m -f -
+    - ssh windows 'tar --exclude=shared/llvm-ep-prefix -c -f - shared' | tar -x -m -f -
   artifacts:
     name: "$ARTIFACTS_NAME"
     paths:
