[#74345] ARM: Add test cases with literal pools
Counterexamples for using createELFStreamer directly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -318,11 +318,15 @@ disassemble(${ARCH} 86bffee700bffee7  "itte hi bhi #-4 nophi bls #-4" )
 disassemble(${ARCH} 00bf00bf00bf00bf00bf "nopeq nopeq nopeq nopeq nop" "-c 0=0x01")
 disassemble(${ARCH} 00bf00bf          "nop nopeq"         "-c 2=0x01" )
 disassemble(${ARCH} 00bf00bf00bf00bf00bf "nopeq nopeq nop nopne nop" "-c 0=0x01,4=0x00,6=0x18")
+# With literal pool (placed after the nops)
+assemble   (${ARCH} 014900bf00bf0000a0860100 "ldr r1, =100000\n nop\n nop")
 
 set(ARCH arm arm926ej-s)
 bothways   (${ARCH} 01508532          "addlo  r5, r5, #1"             )
 bothways   (${ARCH} 000ab0e1          "lsls   r0, r0, #20"            )
 bothways   (${ARCH} 0a00001a          "bne    #40"                    )
+# With literal pool (placed after the nops)
+assemble   (${ARCH} 04109fe50000a0e10000a0e1a0860100 "ldr r1, =100000\n nop\n nop")
 
 set(ARCH i386 i386)
 bothways   (${ARCH} 6b7b0c14          "imull  $20, 12(%ebx), %edi"    )
